# cinecanvas2ass

./: LICENSE  README.md  main.py  pyproject.toml
cinecanvas/: __init__.py  cli.py  conversion.py  parser.py
